updated node version in packagejson

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Finals",
+  "name": "finals",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "engines": {
-    "node": "9.x"
+    "node": "9.11.1"
   },
   "scripts": {
     "start": "ionic-app-scripts serve",
